<resources>
    <string name="app_name">Fairy Tales</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="jack">Jack and the Beanstalk</string>
    <string name="beauty">Beauty and the Beast</string>
    <string name="aladdin">Aladdin</string>
    <string name="fiffy">Fiffy and Teddy</string>
    <string name="matthew">Matthew is up</string>
    <string name="fairy_tales">Fairy Tales</string>
    <string name="home">Home</string>
    <string name="statistics">Statistics</string>
    <string name="welcome">Welcome to audio Fairy Tails</string>
    <string name="butterfly">Quantum Butterfly</string>

</resources>