<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout_MainActivity1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.dynamic.MainActivity1"
    tools:ignore="HardcodedText"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <Button
            android:id="@+id/button"
            android:layout_width="194dp"
            android:layout_height="56dp"
            android:layout_marginBottom="328dp"
            android:onClick="stopStory"
            android:text="Stop The Story"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button3"
            android:layout_width="194dp"
            android:layout_height="56dp"
            android:layout_marginBottom="328dp"
            android:onClick="tellStory"
            android:text="Tell The Story"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.023"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonStory4"
            android:layout_width="194dp"
            android:layout_height="56dp"
            android:layout_marginBottom="60dp"
            android:onClick="getStory4"
            android:text="@string/fiffy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/buttonStory3"
            android:layout_width="194dp"
            android:layout_height="56dp"
            android:layout_marginBottom="60dp"
            android:onClick="getStory3"
            android:text="@string/aladdin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.023"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            app:layout_constraintVertical_bias="0.674" />

        <Button
            android:id="@+id/buttonStory5"
            android:layout_width="194dp"
            android:layout_height="56dp"
            android:layout_marginBottom="60dp"
            android:onClick="getStory5"
            android:text="@string/matthew"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.021"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/buttonStory2"
            android:layout_width="194dp"
            android:layout_height="56dp"
            android:layout_marginBottom="60dp"
            android:onClick="getStory2"
            android:text="@string/jack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.023"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            app:layout_constraintVertical_bias="0.311" />

        <Button
            android:id="@+id/buttonStory6"
            android:layout_width="194dp"
            android:layout_height="56dp"
            android:layout_marginBottom="60dp"
            android:onClick="getStory6"
            android:text="Quantum Butterfly"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            app:layout_constraintVertical_bias="0.674" />

        <Button
            android:id="@+id/buttonStory"
            android:layout_width="194dp"
            android:layout_height="56dp"
            android:layout_marginBottom="60dp"
            android:onClick="getStory1"
            android:text="@string/beauty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            app:layout_constraintVertical_bias="0.311" />

        <ImageView
            android:id="@+id/storyImage"
            android:layout_width="224dp"
            android:layout_height="253dp"
            android:contentDescription="Story image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.072"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="273dp"
            android:layout_height="44dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storyImage" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="Select A Fairy Tail"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            app:layout_constraintVertical_bias="0.065" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu"
        />
</androidx.drawerlayout.widget.DrawerLayout>